# nrftest

./: .gitmodules  CMakeLists.txt  blink.cpp  core.cmake  gen_arduino_srctab.cmake  libs.cmake  update.cmake
cmake/Modules/Platform/: YuniCortexM4F.cmake
